--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,4 @@
 <h1>App</h1>
+
+<button class="btn btn-sm btn-success" (click)="openFile()">Open File</button>
+<button class="btn btn-sm btn-primary" (click)="showMessage()">Show Message</button>
