--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,9 @@
 <h1>App</h1>
-
+<div *ngIf="electronService.isElectron(); else web">
+  <h2>Electron mode</h2>
+</div>
+<ng-template #web>
+  <h2>Web mode</h2>
+</ng-template>
 <button class="btn btn-sm btn-success" (click)="openFile()">Open File</button>
 <button class="btn btn-sm btn-primary" (click)="showMessage()">Show Message</button>
