--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,8 @@
 <h1>App</h1>
-<div *ngIf="electronService.isElectron(); else web">
+
+
+
+<!-- <div *ngIf="electronService.isElectron(); else web">
   <h2>Electron mode</h2>
   <p>{{ electronHwidService.hwid | async }}</p>
 </div>
@@ -27,4 +30,4 @@
 </div>
 <ng-template #signedIn>
   <button class="btn btn-sm btn-danger" (click)="authService.signOut()">Sign Out</button>
-</ng-template>
+</ng-template> -->
