--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,33 +1,4 @@
-<h1>App</h1>
-
-
-
-<!-- <div *ngIf="electronService.isElectron(); else web">
-  <h2>Electron mode</h2>
-  <p>{{ electronHwidService.hwid | async }}</p>
+<app-navbar></app-navbar>
+<div class="container">
+  <router-outlet></router-outlet>
 </div>
-<ng-template #web>
-  <h2>Web mode</h2>
-</ng-template>
-
-<button class="btn btn-sm btn-success" (click)="openFile()">Open File</button>
-<button class="btn btn-sm btn-primary" (click)="showMessage()">Show Message</button>
-
-<div *ngIf="!authService.isSignedIn(); else signedIn">
-  <form [formGroup]="loginForm" (submit)="signIn()">
-    <div class="form-group">
-      <label for="">Email</label>
-      <input formControlName="email" type="email" class="form-control">
-      <div *ngIf="email.touched && email.invalid" class="alert alert-danger">Email error</div>
-    </div>
-    <div class="form-group">
-      <label for="">Password</label>
-      <input formControlName="password" type="password" class="form-control">
-      <div *ngIf="password.touched && password.invalid" class="alert alert-danger">Password error</div>
-    </div>
-    <button class="btn btn-sm btn-primary">Sign In</button>
-  </form>
-</div>
-<ng-template #signedIn>
-  <button class="btn btn-sm btn-danger" (click)="authService.signOut()">Sign Out</button>
-</ng-template> -->
