--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,6 +1,6 @@
-<nav class="navbar navbar-expand-md navbar-dark bg-danger mb-4">
+<nav class="navbar navbar-expand-md navbar-dark bg-info mb-4">
   <a class="navbar-brand" routerLink="/home">
-    <span class="fa fa-leaf"></span> Anchor
+    <span class="fa fa-leaf"></span> Lotus
   </a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
