--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-md navbar-dark bg-info mb-4">
-  <a class="navbar-brand" routerLink="/home">
+  <a class="navbar-brand" routerLink="/">
     <span class="fa fa-leaf"></span> Lotus
   </a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
@@ -8,7 +8,7 @@
   <div class="collapse navbar-collapse" id="navbarCollapse" #navbar>
     <ul class="navbar-nav mr-auto">
       <li class="nav-item">
-        <a class="nav-link" routerLink="/home" routerLinkActive="active" appCollapse [el]="navbar">Home</a>
+        <a class="nav-link" routerLink="/" routerLinkActive="active" appCollapse [el]="navbar">Home</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" routerLink="/test" routerLinkActive="active" appCollapse [el]="navbar">Test</a>
@@ -20,7 +20,7 @@
     <ul class="navbar-nav ml-auto">
       <li *ngIf="(authService.user | async); else guest" class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          {{ (authService.user | async)?.email }}
+          {{ (dbService.user | async)?.displayName }}
         </a>
         <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownMenuLink">
           <a class="dropdown-item" routerLink="/profile" routerLinkActive="active" appCollapse [el]="navbar">Profile</a>
