--- a/src/app/components/login-form/login-form.component.html
+++ b/src/app/components/login-form/login-form.component.html
@@ -1,19 +1,33 @@
 <app-page title="Login">
   <form [formGroup]="loginForm" (submit)="onLogin()">
     <div class="form-group">
-      <label for="email">Email address</label>
+      <label [ngClass]="{'text-danger': email.touched && email.invalid}" for="email">Email address</label>
       <div class="input-group">
         <span class="input-group-addon"><i class="fa fa-envelope"></i></span>
-        <input formControlName="email" type="email" class="form-control" placeholder="Email">
+        <input formControlName="email" [ngClass]="{'is-invalid': email.touched && email.invalid}" type="email" class="form-control" placeholder="Email">
       </div>
-      <small class="form-text text-muted">Don't worry, your email is safe with us.</small>
-      <div *ngIf="email.touched && email.invalid" class="alert alert-danger">Email error</div>
+      <div *ngIf="email.touched && email.invalid; else emailNoErrors">
+        <small *ngIf="email.errors?.required" class="form-text text-danger">
+          Enter your email address
+        </small>
+        <small *ngIf="email.errors?.email" class="form-text text-danger">
+          Your email address is invalid
+        </small>
+      </div>
+      <ng-template #emailNoErrors>
+        <small class="form-text text-muted">Don't worry, your email is safe with us.</small>
+      </ng-template>
     </div>
     <div class="form-group">
-      <label for="password">Password</label>
+      <label [ngClass]="{'text-danger': password.touched && password.invalid}" for="password">Password</label>
       <div class="input-group">
         <span class="input-group-addon"><i class="fa fa-lock"></i></span>
-        <input formControlName="password" type="password" class="form-control" placeholder="Password">
+        <input formControlName="password" [ngClass]="{'is-invalid': password.touched && password.invalid}" type="password" class="form-control" placeholder="Password">
+      </div>
+      <div *ngIf="password.touched && password.invalid">
+        <small *ngIf="password.errors?.required" class="form-text text-danger">
+          Enter your password
+        </small>
       </div>
     </div>
     <button class="btn btn-primary">Login</button>
