--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,6 +1,6 @@
-<nav class="navbar navbar-expand-md navbar-dark bg-info mb-4">
+<nav class="navbar navbar-expand-md navbar-light bg-light mb-4">
   <a class="navbar-brand" routerLink="/">
-    <span class="fa fa-leaf"></span> Lotus
+    <img src="assets/logo_small.png" alt="lotus">
   </a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
@@ -8,7 +8,7 @@
   <div class="collapse navbar-collapse" id="navbarCollapse" #navbar>
     <ul class="navbar-nav mr-auto">
       <li class="nav-item">
-        <a class="nav-link" routerLink="/" routerLinkActive="active" appCollapse [el]="navbar">Home</a>
+        <a class="nav-link" routerLink="/home" routerLinkActive="active" appCollapse [el]="navbar">Home</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" routerLink="/test" routerLinkActive="active" appCollapse [el]="navbar">Test</a>
@@ -30,6 +30,9 @@
       <ng-template #guest>
         <li class="nav-item">
           <a class="nav-link" routerLink="/login" routerLinkActive="active" appCollapse [el]="navbar">Login</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" routerLink="/register" routerLinkActive="active" appCollapse [el]="navbar">Register</a>
         </li>
       </ng-template>
     </ul>
