Fixed broken code from updating to new angularfire2 v5

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,3 +1,4 @@
 <app-page title="Dashboard">
   <p>Welcome, {{ (dbService.user | async)?.displayName }}</p>
+  <p>{{ (dbService.user | async) | json }}</p>
 </app-page>
