--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-md navbar-light bg-light mb-4">
+<nav class="navbar navbar-expand-md navbar-light mb-4">
   <a class="navbar-brand" routerLink="/">
     <img src="assets/logo_small.png" alt="lotus">
   </a>
