Added registration and flash messages for errors

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,4 +1,4 @@
 <app-page title="Dashboard">
-  <p>Welcome, {{ (dbService.user | async)?.displayName }}</p>
-  <p>{{ (dbService.user | async) | json }}</p>
+  <p>Welcome, {{ (authService.user | async)?.displayName }}</p>
+  <p>{{ (authService.user | async) | json }}</p>
 </app-page>
