--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,8 @@
 <app-navbar></app-navbar>
 <div class="container">
+  <div class="text-center">
+    <flash-messages></flash-messages>
+  </div>
   <router-outlet></router-outlet>
 </div>
 <app-footer></app-footer>
