--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -18,9 +18,9 @@
       </li>
     </ul>
     <ul class="navbar-nav ml-auto">
-      <li *ngIf="(authService.user | async); else guest" class="nav-item dropdown">
+      <li *ngIf="(authService.authState | async); else guest" class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          {{ (dbService.user | async)?.displayName }}
+          {{ (authService.user | async)?.displayName }}
         </a>
         <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownMenuLink">
           <a class="dropdown-item" routerLink="/profile" routerLinkActive="active" appCollapse [el]="navbar">Profile</a>
