--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -20,7 +20,7 @@
     <ul class="navbar-nav ml-auto">
       <li *ngIf="(authService.authState | async); else guest" class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          {{ (authService.user | async)?.displayName }}
+          {{ (authService.user | async)?.data.displayName }}
         </a>
         <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownMenuLink">
           <a class="dropdown-item" routerLink="/profile" routerLinkActive="active" appCollapse [el]="navbar">Profile</a>
