Moved firestore code to models to clean up auth.service

--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,6 +1,6 @@
 <footer class="text-center text-muted">
   Copyright &copy; {{ date.getFullYear() }} Lotus
-  <span *ngIf="(authService.authState | async) && (authService.user | async)?.hasRole()">
-    | <span [class]="cssClass"><i class="fa fa-user-circle-o"></i></span>
+  <span *ngIf="(authService.authState | async) && roleColor && roleName">
+    | <span [style.color]="roleColor"><i class="fa fa-user-circle-o"></i> {{ roleName }}</span>
   </span>
 </footer>
