--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,18 +1,7 @@
 <app-page title="Dashboard">
-  <p>Welcome, {{ (authService.user.data | async)?.displayName }}</p>
+  <p>Welcome, {{ (user.data | async)?.displayName }}</p>
   <p>Your IP address is: {{ ipService.ip }}</p>
-  <p>{{ ((authService.user.data | async)?.role.data | async) | json }}</p>
-  <!-- <p>{{ (authService.user.data | async) | circularJson }}</p> -->
-  <p *ngIf="role?.isSub()">
-    Subscriber
-  </p>
-  <p *ngIf="role?.isMod()">
-    Moderator
-  </p>
-  <p *ngIf="role?.isAdmin()">
-    Administrator
-  </p>
-  <p *ngIf="role?.isOwner()">
-    Owner
-  </p>
+  <div *ngFor="let role of roles">
+    {{ (role.data | async) | json }}
+  </div>
 </app-page>
