--- a/src/app/components/register-form/register-form.component.html
+++ b/src/app/components/register-form/register-form.component.html
@@ -1,10 +1,10 @@
 <app-page title="Register">
   <form [formGroup]="registerForm" (submit)="onRegister()">
     <div class="form-group">
-      <label [ngClass]="{'text-danger': email.touched && email.invalid}" for="email">Email address</label>
+      <label [class.text-danger]="email.touched && email.invalid" for="email">Email address</label>
       <div class="input-group">
         <span class="input-group-addon"><i class="fa fa-envelope"></i></span>
-        <input formControlName="email" [ngClass]="{'is-invalid': email.touched && email.invalid}" type="email" class="form-control" placeholder="Email">
+        <input formControlName="email" [class.is-invalid]="email.touched && email.invalid" type="email" class="form-control" placeholder="Email">
       </div>
       <div *ngIf="email.touched && email.invalid">
         <small *ngIf="email.errors" class="form-text text-danger">
@@ -13,10 +13,10 @@
       </div>
     </div>
     <div class="form-group">
-      <label [ngClass]="{'text-danger': password.touched && password.invalid}" for="password">Password</label>
+      <label [class.text-danger]="password.touched && password.invalid" for="password">Password</label>
       <div class="input-group">
         <span class="input-group-addon"><i class="fa fa-lock"></i></span>
-        <input formControlName="password" [ngClass]="{'is-invalid': password.touched && password.invalid}" type="password" class="form-control" placeholder="Password">
+        <input formControlName="password" [class.is-invalid]="password.touched && password.invalid" type="password" class="form-control" placeholder="Password">
       </div>
       <div *ngIf="password.touched && password.invalid">
         <small *ngIf="password.errors" class="form-text text-danger">
@@ -25,10 +25,10 @@
       </div>
     </div>
     <div class="form-group">
-      <label [ngClass]="{'text-danger': confirmPassword.touched && confirmPassword.invalid}" for="confirmPassword">Confirm Password</label>
+      <label [class.text-danger]="confirmPassword.touched && confirmPassword.invalid" for="confirmPassword">Confirm Password</label>
       <div class="input-group">
         <span class="input-group-addon"><i class="fa fa-lock"></i></span>
-        <input formControlName="confirmPassword" [ngClass]="{'is-invalid': confirmPassword.touched && confirmPassword.invalid}" type="password" class="form-control" placeholder="Confirm Password">
+        <input formControlName="confirmPassword" [class.is-invalid]="confirmPassword.touched && confirmPassword.invalid" type="password" class="form-control" placeholder="Confirm Password">
       </div>
       <div *ngIf="confirmPassword.touched && confirmPassword.invalid">
         <small *ngIf="confirmPassword.errors" class="form-text text-danger">
@@ -37,10 +37,10 @@
       </div>
     </div>
     <div class="form-group">
-      <label [ngClass]="{'text-danger': displayName.touched && displayName.invalid}" for="displayName">Display Name</label>
+      <label [class.text-danger]="displayName.touched && displayName.invalid" for="displayName">Display Name</label>
       <div class="input-group">
         <span class="input-group-addon"><i class="fa fa-user-circle"></i></span>
-        <input formControlName="displayName" [ngClass]="{'is-invalid': displayName.touched && displayName.invalid}" type="text" class="form-control" placeholder="Display Name">
+        <input formControlName="displayName" [class.is-invalid]="displayName.touched && displayName.invalid" type="text" class="form-control" placeholder="Display Name">
       </div>
       <div *ngIf="displayName.touched && displayName.invalid">
         <small *ngIf="displayName.errors" class="form-text text-danger">
