--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,5 +1,7 @@
 <app-page title="Dashboard">
-  <p>Welcome, {{ (authService.user | async)?.displayName }}</p>
+  <p>Welcome, {{ (user.data | async)?.displayName }}</p>
   <p>Your IP address is: {{ ipService.ip }}</p>
-  <!-- <p>{{ (authService.user | async) | json }}</p> -->
+  <div *ngFor="let role of roles">
+    {{ (role.data | async) | json }}
+  </div>
 </app-page>
