--- a/src/app/routing/components/login-form/login-form.component.html
+++ b/src/app/routing/components/login-form/login-form.component.html
@@ -1,36 +1,26 @@
 <app-page title="Login">
-  <form [formGroup]="loginForm" (submit)="onLogin()">
-    <div class="form-group">
-      <label [class.text-danger]="email.touched && email.invalid" for="email">Email address</label>
-      <div class="input-group">
-        <span class="input-group-addon"><i class="fa fa-envelope"></i></span>
-        <input formControlName="email" [class.is-invalid]="email.touched && email.invalid" type="email" class="form-control" placeholder="Email">
-      </div>
-      <div *ngIf="email.touched && email.invalid; else emailNoErrors">
-        <small *ngIf="email.errors?.required" class="form-text text-danger">
-          Enter your email address.
-        </small>
-        <small *ngIf="email.errors?.email" class="form-text text-danger">
-          Your email address is invalid.
-        </small>
-      </div>
-      <ng-template #emailNoErrors>
-        <small class="form-text text-muted">Don't worry, your email is safe with us.</small>
-      </ng-template>
-    </div>
-    <div class="form-group">
-      <label [class.text-danger]="password.touched && password.invalid" for="password">Password</label>
-      <div class="input-group">
-        <span class="input-group-addon"><i class="fa fa-lock"></i></span>
-        <input formControlName="password" [class.is-invalid]="password.touched && password.invalid" type="password" class="form-control" placeholder="Password">
-      </div>
-      <div *ngIf="password.touched && password.invalid">
-        <small *ngIf="password.errors?.required" class="form-text text-danger">
-          Enter your password.
-        </small>
-      </div>
-    </div>
-    <button class="btn btn-primary" [disabled]="email.invalid || password.invalid">Login</button>
-    <a routerLink="/register"><button class="btn btn-secondary">Register</button></a>
+  <form [formGroup]="loginForm" (ngSubmit)="onLogin()">
+    <p>
+      <mat-form-field class="full-width">
+        <input matInput formControlName="email" type="email" placeholder="Email">
+        <mat-error *ngIf="email.errors?.required">
+          Email is required
+        </mat-error>
+        <mat-error *ngIf="!email.errors?.required && email.errors?.email">
+          Please enter a valid email address
+        </mat-error>
+      </mat-form-field>
+    </p>
+    <p>
+      <mat-form-field class="full-width">
+        <input matInput formControlName="password" type="password" placeholder="Password">
+        <mat-error *ngIf="password.errors?.required">
+          Password is required
+        </mat-error>
+      </mat-form-field>
+    </p>
+    <p>
+      <button mat-raised-button color="primary" [disabled]="loginForm.invalid">LOGIN</button>
+    </p>
   </form>
 </app-page>
