--- a/src/app/routing/components/register-form/register-form.component.html
+++ b/src/app/routing/components/register-form/register-form.component.html
@@ -1,54 +1,51 @@
 <app-page title="Register">
-  <form [formGroup]="registerForm" (submit)="onRegister()">
-    <div class="form-group">
-      <label [class.text-danger]="email.touched && email.invalid" for="email">Email address</label>
-      <div class="input-group">
-        <span class="input-group-addon"><i class="fa fa-envelope"></i></span>
-        <input formControlName="email" [class.is-invalid]="email.touched && email.invalid" type="email" class="form-control" placeholder="Email">
-      </div>
-      <div *ngIf="email.touched && email.invalid">
-        <small *ngIf="email.errors" class="form-text text-danger">
-          {{ email.errors | json }}
-        </small>
-      </div>
-    </div>
-    <div class="form-group">
-      <label [class.text-danger]="password.touched && password.invalid" for="password">Password</label>
-      <div class="input-group">
-        <span class="input-group-addon"><i class="fa fa-lock"></i></span>
-        <input formControlName="password" [class.is-invalid]="password.touched && password.invalid" type="password" class="form-control" placeholder="Password">
-      </div>
-      <div *ngIf="password.touched && password.invalid">
-        <small *ngIf="password.errors" class="form-text text-danger">
-          {{ password.errors | json }}
-        </small>
-      </div>
-    </div>
-    <div class="form-group">
-      <label [class.text-danger]="confirmPassword.touched && confirmPassword.invalid" for="confirmPassword">Confirm Password</label>
-      <div class="input-group">
-        <span class="input-group-addon"><i class="fa fa-lock"></i></span>
-        <input formControlName="confirmPassword" [class.is-invalid]="confirmPassword.touched && confirmPassword.invalid" type="password" class="form-control" placeholder="Confirm Password">
-      </div>
-      <div *ngIf="confirmPassword.touched && confirmPassword.invalid">
-        <small *ngIf="confirmPassword.errors" class="form-text text-danger">
-          {{ confirmPassword.errors | json }}
-        </small>
-      </div>
-    </div>
-    <div class="form-group">
-      <label [class.text-danger]="displayName.touched && displayName.invalid" for="displayName">Display Name</label>
-      <div class="input-group">
-        <span class="input-group-addon"><i class="fa fa-user-circle"></i></span>
-        <input formControlName="displayName" [class.is-invalid]="displayName.touched && displayName.invalid" type="text" class="form-control" placeholder="Display Name">
-      </div>
-      <div *ngIf="displayName.touched && displayName.invalid">
-        <small *ngIf="displayName.errors" class="form-text text-danger">
-          {{ displayName.errors | json }}
-        </small>
-      </div>
-    </div>
-    <button class="btn btn-primary" [disabled]="email.invalid || password.invalid || confirmPassword.invalid || displayName.invalid">Register</button>
-    <a routerLink="/login"><button class="btn btn-secondary">Login</button></a>
+  <form [formGroup]="registerForm" (ngSubmit)="onRegister()">
+    <p>
+      <mat-form-field class="full-width">
+        <input matInput formControlName="email" type="email" placeholder="Email">
+        <mat-error *ngIf="email.errors?.required">
+          Email is required
+        </mat-error>
+        <mat-error *ngIf="!email.errors?.required && email.errors?.email">
+          Please enter a valid email address
+        </mat-error>
+      </mat-form-field>
+    </p>
+    <p>
+      <mat-form-field class="full-width">
+        <input matInput formControlName="password" type="password" placeholder="Password">
+        <mat-error *ngIf="password.errors?.required">
+          Password is required
+        </mat-error>
+        <mat-error *ngIf="!password.errors?.required && password.errors?.minlength">
+          Your password must contain a minimum of {{ password.errors?.minlength?.requiredLength }} characters
+        </mat-error>
+      </mat-form-field>
+    </p>
+    <p>
+      <mat-form-field class="full-width">
+        <input matInput formControlName="confirmPassword" type="password" placeholder="Confirm Password">
+        <mat-error *ngIf="confirmPassword.errors?.required">
+          Confirm Password is required
+        </mat-error>
+        <mat-error *ngIf="!confirmPassword.errors?.required && confirmPassword.errors?.equalTo">
+          Passwords don't match
+        </mat-error>
+      </mat-form-field>
+    </p>
+    <p>
+      <mat-form-field class="full-width">
+        <input matInput formControlName="displayName" type="text" placeholder="Display Name">
+        <mat-error *ngIf="displayName.errors?.required">
+          Display Name is required
+        </mat-error>
+        <mat-error *ngIf="!displayName.errors?.required && displayName.errors?.minlength">
+          Your display name must contain a minimum of {{ displayName.errors?.minlength?.requiredLength }} characters
+        </mat-error>
+      </mat-form-field>
+    </p>
+    <p>
+      <button mat-raised-button color="primary" [disabled]="registerForm.invalid">REGISTER</button>
+    </p>
   </form>
 </app-page>
