--- a/src/app/shared/components/navbar/navbar.component.scss
+++ b/src/app/shared/components/navbar/navbar.component.scss
@@ -1,6 +1,12 @@
-nav {
-  background-image: -webkit-gradient(linear, left top, left bottom, from(lightgrey, white));
-  background-image: -webkit-linear-gradient(top, lightgrey, white);
-  background-image: -moz-linear-gradient(top, lightgrey, white);
-  background-image: linear-gradient(to bottom, lightgrey, white);
+.icon {
+  padding: 0 16px;
+}
+
+.spacer {
+  flex: 1 1 auto;
+}
+
+mat-toolbar {
+  position: fixed;
+  z-index: 10;
 }
