Reworked header/footer to use flex and added sidenav

--- a/src/app/routing/components/login-form/login-form.component.html
+++ b/src/app/routing/components/login-form/login-form.component.html
@@ -1,7 +1,7 @@
 <app-page title="Login">
   <form [formGroup]="loginForm" (ngSubmit)="onLogin()">
     <p>
-      <mat-form-field class="full-width">
+      <mat-form-field class="app-full-width">
         <input matInput formControlName="email" type="email" placeholder="Email" autofocus>
         <mat-error *ngIf="email.errors?.required">
           Email is required
@@ -12,7 +12,7 @@
       </mat-form-field>
     </p>
     <p>
-      <mat-form-field class="full-width">
+      <mat-form-field class="app-full-width">
         <input matInput formControlName="password" type="password" placeholder="Password">
         <mat-error *ngIf="password.errors?.required">
           Password is required
