--- a/src/app/shared/components/footer/footer.component.html
+++ b/src/app/shared/components/footer/footer.component.html
@@ -1,14 +1,5 @@
-<mat-toolbar>
+<mat-toolbar color="primary">
   <small>
-    <em>Copyright &copy; {{ date.getFullYear() }} Lotus</em>
+    Copyright &copy; {{ date.getFullYear() }} Lotus
   </small>
 </mat-toolbar>
-
-<!-- <footer class="text-center text-muted">
-  <div *ngIf="(authService.authState | async)">
-    <span *ngFor="let role of roles">
-      <span [style.color]="(role.data | async)?.color" class="badge badge-light">{{ (role.data | async)?.name }}</span>
-    </span>
-  </div>
-  Copyright &copy; {{ date.getFullYear() }} Lotus
-</footer> -->
