--- a/src/app/shared/components/page/page.component.html
+++ b/src/app/shared/components/page/page.component.html
@@ -4,7 +4,7 @@
       <h2>{{ title }}</h2>
     </mat-card-title>
     <mat-card-subtitle>
-      {{ description }}
+      {{ subtitle }}
     </mat-card-subtitle>
   </mat-card-header>
   <mat-card-content>
