--- a/src/app/core/components/app/app.component.html
+++ b/src/app/core/components/app/app.component.html
@@ -1,3 +1,43 @@
-<app-navbar></app-navbar>
-<router-outlet></router-outlet>
-<app-footer></app-footer>
+<div class="app flex-container" fxLayout="column" fxLayoutAlign="start stretch">
+  <mat-toolbar class="mat-elevation-z6 header" color="primary">
+    <button mat-icon-button (click)="appSidenav.open()">
+      <mat-icon>menu</mat-icon>
+    </button>
+    <span>Lotus</span>
+    <span class="app-spacer"></span>
+    <div *ngIf="(authService.authState | async); else guest">
+      <button mat-button [matMenuTriggerFor]="appMenu">
+        <span>{{ (authService.user.data | async)?.displayName }} <i class="fa fa-caret-down"></i></span>
+      </button>
+    </div>
+    <ng-template #guest>
+      <button mat-icon-button routerLink="/login" matTooltip="Login">
+        <mat-icon>lock</mat-icon>
+      </button>
+      <button mat-icon-button routerLink="/register" matTooltip="Register">
+        <mat-icon>person</mat-icon>
+      </button>
+    </ng-template>
+  </mat-toolbar>
+  <mat-menu #appMenu>
+    <button mat-menu-item>
+      <span>Profile</span>
+    </button>
+    <button mat-menu-item>
+      <span>Settings</span>
+    </button>
+    <button mat-menu-item (click)="authService.logout()">
+      <span>Logout</span>
+    </button>
+  </mat-menu>
+  <mat-sidenav-container fxFlex>
+    <app-header></app-header>
+    <mat-sidenav #appSidenav>
+      <app-sidenav></app-sidenav>
+    </mat-sidenav>
+    <router-outlet></router-outlet>
+  </mat-sidenav-container>
+  <footer class="footer">
+    <app-footer></app-footer>
+  </footer>
+</div>
