--- a/src/app/core/components/app/app.component.html
+++ b/src/app/core/components/app/app.component.html
@@ -15,7 +15,7 @@
         <mat-icon>lock</mat-icon>
       </button>
       <button mat-icon-button routerLink="/register" matTooltip="Register">
-        <mat-icon>person</mat-icon>
+        <mat-icon>account_circle</mat-icon>
       </button>
     </ng-template>
   </mat-toolbar>
