--- a/src/app/shared/components/footer/footer.component.html
+++ b/src/app/shared/components/footer/footer.component.html
@@ -2,4 +2,8 @@
   <small>
     Copyright &copy; {{ date.getFullYear() }} Lotus
   </small>
+  <span class="app-spacer"></span>
+  <button mat-icon-button matTooltip="About">
+    <mat-icon>info</mat-icon>
+  </button>
 </mat-toolbar>
