--- a/src/app/core/components/app/app.component.html
+++ b/src/app/core/components/app/app.component.html
@@ -6,8 +6,9 @@
     <span>Lotus</span>
     <span class="app-spacer"></span>
     <div *ngIf="(authService.authState | async); else guest">
-      <button mat-button [matMenuTriggerFor]="appMenu">
-        <span>{{ (authService.user.data | async)?.displayName }} <i class="fa fa-caret-down"></i></span>
+      <button mat-button [matMenuTriggerFor]="appMenu" matTooltip="User functions">
+        <span>{{ (authService.user.data | async)?.displayName }}</span>
+        <mat-icon>more_vert</mat-icon>
       </button>
     </div>
     <ng-template #guest>
