--- a/src/app/shared/components/footer/footer.component.html
+++ b/src/app/shared/components/footer/footer.component.html
@@ -1,7 +1,5 @@
 <mat-toolbar color="primary">
-  <small>
-    Copyright &copy; {{ date.getFullYear() }} Lotus
-  </small>
+  <small>Copyright &copy; {{ date.getFullYear() }} Lotus</small>
   <span class="app-spacer"></span>
   <button mat-icon-button matTooltip="About">
     <mat-icon>info</mat-icon>
