--- a/src/app/core/components/app/app.component.html
+++ b/src/app/core/components/app/app.component.html
@@ -12,11 +12,13 @@
       </button>
     </div>
     <ng-template #guest>
-      <button mat-icon-button routerLink="/login" matTooltip="Login">
+      <button mat-button routerLink="/login">
         <mat-icon>lock</mat-icon>
+        <span>Log in</span>
       </button>
-      <button mat-icon-button routerLink="/register" matTooltip="Register">
+      <button mat-button routerLink="/signup">
         <mat-icon>account_circle</mat-icon>
+        <span>Sign up</span>
       </button>
     </ng-template>
   </mat-toolbar>
@@ -28,7 +30,7 @@
       <span>Settings</span>
     </button>
     <button mat-menu-item (click)="authService.logout()">
-      <span>Logout</span>
+      <span>Log out</span>
     </button>
   </mat-menu>
   <mat-sidenav-container fxFlex>
