Make sidenav toggleable

--- a/src/app/core/components/app/app.component.html
+++ b/src/app/core/components/app/app.component.html
@@ -1,6 +1,6 @@
 <div class="app flex-container" fxLayout="column" fxLayoutAlign="start stretch">
   <mat-toolbar class="mat-elevation-z6 header" color="primary">
-    <button mat-icon-button (click)="appSidenav.open()">
+    <button mat-icon-button (click)="appSidenav.toggle()">
       <mat-icon>menu</mat-icon>
     </button>
     <span>Lotus</span>
