Fixed foreign login

--- a/src/app/routing/components/login/login.component.html
+++ b/src/app/routing/components/login/login.component.html
@@ -3,20 +3,20 @@
     <mat-grid-tile>
       <div>
         <p>
-          <button mat-raised-button class="foreign-login-button" color="primary">
-            <mat-icon>lock</mat-icon>
+          <button mat-raised-button class="foreign-login-button" color="primary" (click)="onFacebookLogin()">
+            <i class="fa fa-facebook fa-lg"></i>
             <span>Facebook</span>
           </button>
         </p>
         <p>
-          <button mat-raised-button class="foreign-login-button" color="primary">
-            <mat-icon>lock</mat-icon>
+          <button mat-raised-button class="foreign-login-button" color="primary" (click)="onGoogleLogin()">
+            <i class="fa fa-google fa-lg"></i>
             <span>Google</span>
           </button>
         </p>
         <p>
-          <button mat-raised-button class="foreign-login-button" color="primary">
-            <mat-icon>lock</mat-icon>
+          <button mat-raised-button class="foreign-login-button" color="primary" (click)="onTwitterLogin()">
+            <i class="fa fa-twitter fa-lg"></i>
             <span>Twitter</span>
           </button>
         </p>
