--- a/src/app/routing/components/signup/signup.component.html
+++ b/src/app/routing/components/signup/signup.component.html
@@ -1,5 +1,5 @@
 <app-page title="Sign up">
-  <form [formGroup]="signupForm" (ngSubmit)="onSignup()">
+  <form [formGroup]="signupForm" (ngSubmit)="onSignUp()">
     <p>
       <mat-form-field class="app-full-width">
         <input matInput formControlName="email" type="email" placeholder="Email">
