--- a/src/app/core/components/app/app.component.html
+++ b/src/app/core/components/app/app.component.html
@@ -16,7 +16,7 @@
         <mat-icon>lock</mat-icon>
         <span>Log in</span>
       </button>
-      <button mat-button routerLink="/signup">
+      <button mat-button routerLink="/signup" disabled>
         <mat-icon>account_circle</mat-icon>
         <span>Sign up</span>
       </button>
@@ -29,7 +29,7 @@
     <button mat-menu-item>
       <span>Settings</span>
     </button>
-    <button mat-menu-item (click)="authService.logout()">
+    <button mat-menu-item (click)="authService.logOut()">
       <span>Log out</span>
     </button>
   </mat-menu>
