Added about dialog for footer

--- a/src/app/routing/components/login/login.component.html
+++ b/src/app/routing/components/login/login.component.html
@@ -1,15 +1,15 @@
 <app-page title="Log in">
   <p class="app-text-center">
-    <button mat-mini-fab color="primary" (click)="onGoogleLogIn()" matTooltip="Google">
+    <button mat-button color="primary" (click)="onGoogleLogIn()" matTooltip="Google">
       <i class="fa fa-google fa-lg"></i>
     </button>
-    <button mat-mini-fab color="primary" (click)="onFacebookLogIn()" matTooltip="Facebook">
+    <button mat-button color="primary" (click)="onFacebookLogIn()" matTooltip="Facebook">
       <i class="fa fa-facebook fa-lg"></i>
     </button>
-    <button mat-mini-fab color="primary" (click)="onTwitterLogIn()" matTooltip="Twitter">
+    <button mat-button color="primary" (click)="onTwitterLogIn()" matTooltip="Twitter">
       <i class="fa fa-twitter fa-lg"></i>
     </button>
-    <button mat-mini-fab color="primary" (click)="onGitHubLogIn()" matTooltip="GitHub">
+    <button mat-button color="primary" (click)="onGitHubLogIn()" matTooltip="GitHub">
       <i class="fa fa-github fa-lg"></i>
     </button>
   </p>
