Fixed footer sticking

--- a/src/app/core/components/app/app.component.html
+++ b/src/app/core/components/app/app.component.html
@@ -1,4 +1,4 @@
-<div class="app flex-container" fxLayout="column" fxLayoutAlign="start stretch">
+<div class="app" fxLayout="column" fxLayoutAlign="start stretch">
   <mat-toolbar class="mat-elevation-z6 header" color="primary">
     <button mat-icon-button (click)="appSidenav.toggle()">
       <mat-icon>menu</mat-icon>
@@ -34,11 +34,15 @@
     </button>
   </mat-menu>
   <mat-sidenav-container fxFlex>
-    <app-header></app-header>
+    <div class="content" fxLayout="column">
+      <app-header></app-header>
+      <div fxFlex>
+        <router-outlet></router-outlet>
+      </div>
+      <app-footer></app-footer>
+    </div>
     <mat-sidenav #appSidenav>
       <app-sidenav></app-sidenav>
     </mat-sidenav>
-    <router-outlet></router-outlet>
   </mat-sidenav-container>
-  <app-footer></app-footer>
 </div>
